--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的功能网页和网址导航</title>
+    <title>又是新的一天</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
