--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>欢迎来到我的网站</h1>
+        <button id="themeToggleBtn">切换主题</button>
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
@@ -26,5 +27,6 @@
     <footer>
         <p>&copy; 2024 我的功能网页和网址导航</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
