--- a/function_pages.html
+++ b/function_pages.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>功能网页</h1>
+        <button id="themeToggleBtn">切换主题</button>
         <nav>
             <ul>
                 <li><a href="index.html">首页</a></li>
@@ -20,15 +21,29 @@
     <main>
         <section class="function-list">
             <h2>功能列表</h2>
-            <ul>
-                <li><a href="pages/page1.html">功能网页1</a></li>
-                <li><a href="pages/page2.html">功能网页2</a></li>
-                <!-- 更多功能网页链接 -->
+            <input type="text" id="searchFunction" placeholder="搜索功能网页...">
+            <ul id="functionList">
+                <li>
+                    <a href="pages/page1.html">功能网页1</a>
+                    <button class="expand-btn">展开</button>
+                    <div class="expandable-content" style="display: none;">
+                        <p>这里是功能网页1的更多信息。</p>
+                    </div>
+                </li>
+                <li>
+                    <a href="pages/page2.html">功能网页2</a>
+                    <button class="expand-btn">展开</button>
+                    <div class="expandable-content" style="display: none;">
+                        <p>这里是功能网页2的更多信息。</p>
+                    </div>
+                </li>
+                <!-- 直接在这里嵌入更多功能网页数据 -->
             </ul>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 我的功能网页和网址导航</p>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
