--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section class="intro">
             <h2>简介</h2>
-            <p>这个网站用来存放我以前写过的一些功能网页，并提供一些常用网址的导航。</p>
+            <p>功能网页+网址的导航。</p>
         </section>
     </main>
     <footer>
