--- a/navigation.html
+++ b/navigation.html
@@ -20,21 +20,21 @@
     </header>
     <main>
         <section class="navigation-list">
-            <h2>常用网址</h2>
+            <h2>我的网址</h2>
             <input type="text" id="searchNav" placeholder="搜索网址...">
             <ul id="navList">
                 <li>
-                    <a href="https://www.google.com" target="_blank">Google</a>
+                    <a href="https://emq.syweb.online/#/dashboard/overview" target="_blank">EMQ控制台</a>
                     <button class="expand-btn">展开</button>
                     <div class="expandable-content" style="display: none;">
-                        <p>这是 Google 的更多信息。</p>
+                        <p>emq平台,账号damin</p>
                     </div>
                 </li>
                 <li>
-                    <a href="https://www.github.com" target="_blank">GitHub</a>
+                    <a href="https://bk.syweb.online/" target="_blank">博客</a>
                     <button class="expand-btn">展开</button>
                     <div class="expandable-content" style="display: none;">
-                        <p>这是 GitHub 的更多信息。</p>
+                        <p>我的博客</p>
                     </div>
                 </li>
                 <!-- 直接在这里嵌入更多网址数据 -->
