--- a/navigation.html
+++ b/navigation.html
@@ -27,7 +27,7 @@
                     <a href="https://emq.syweb.online/#/dashboard/overview" target="_blank">EMQ控制台</a>
                     <button class="expand-btn">展开</button>
                     <div class="expandable-content" style="display: none;">
-                        <p>emq平台,账号damin</p>
+                        <p>emq平台,账号admin</p>
                     </div>
                 </li>
                 <li>
