--- a/function_pages.html
+++ b/function_pages.html
@@ -24,17 +24,17 @@
             <input type="text" id="searchFunction" placeholder="搜索功能网页...">
             <ul id="functionList">
                 <li>
-                    <a href="pages/page1.html">功能网页1</a>
+                    <a href="pages/page1.html">翻译页面</a>
                     <button class="expand-btn">展开</button>
                     <div class="expandable-content" style="display: none;">
-                        <p>这里是功能网页1的更多信息。</p>
+                        <p>可以翻译,其他的不用说了吧</p>
                     </div>
                 </li>
                 <li>
-                    <a href="pages/page2.html">功能网页2</a>
+                    <a href="http://fy.syweb.online/fy">没做呢</a>
                     <button class="expand-btn">展开</button>
                     <div class="expandable-content" style="display: none;">
-                        <p>这里是功能网页2的更多信息。</p>
+                        <p>xxxx</p>
                     </div>
                 </li>
                 <!-- 直接在这里嵌入更多功能网页数据 -->
